--- a/eShop.WebApp/LocalizationResources/ViewLocalizationResource.en.resx
+++ b/eShop.WebApp/LocalizationResources/ViewLocalizationResource.en.resx
@@ -117,6 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="categoryUrl" xml:space="preserve">
+    <value>categoryUrl</value>
+    <comment>/Layouts</comment>
+  </data>
   <data name="Chọn ngôn ngữ" xml:space="preserve">
     <value>Choose Language</value>
     <comment>Layout</comment>
@@ -128,5 +132,9 @@
   <data name="Features Items" xml:space="preserve">
     <value>Features Items</value>
     <comment>Layout</comment>
+  </data>
+  <data name="productUrl" xml:space="preserve">
+    <value>products</value>
+    <comment>/Home/Index</comment>
   </data>
 </root>
