--- a/eShop.WebApp/LocalizationResources/ViewLocalizationResource.vi.resx
+++ b/eShop.WebApp/LocalizationResources/ViewLocalizationResource.vi.resx
@@ -117,6 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="categoryUrl" xml:space="preserve">
+    <value>danh-muc</value>
+    <comment>/layout</comment>
+  </data>
   <data name="Chọn ngôn ngữ" xml:space="preserve">
     <value>Chọn ngôn ngữ</value>
     <comment>Layout</comment>
@@ -128,5 +132,9 @@
   <data name="Nike" xml:space="preserve">
     <value>Giày Nike</value>
     <comment>Layout</comment>
+  </data>
+  <data name="productUrl" xml:space="preserve">
+    <value>san-pham</value>
+    <comment>/Home/Index</comment>
   </data>
 </root>
