product category and detail (user) product category (admin)

--- a/eShop.WebApp/LocalizationResources/ViewLocalizationResource.en.resx
+++ b/eShop.WebApp/LocalizationResources/ViewLocalizationResource.en.resx
@@ -133,8 +133,12 @@
     <value>Features Items</value>
     <comment>Layout</comment>
   </data>
-  <data name="productUrl" xml:space="preserve">
+  <data name="products" xml:space="preserve">
     <value>products</value>
+    <comment>/Product/Category</comment>
+  </data>
+  <data name="productUrl" xml:space="preserve">
+    <value>carts</value>
     <comment>/Home/Index</comment>
   </data>
 </root>
